feat(backend): add get products with full-text and fuzzy matches
Refs: #45, #46
