# backend/docs/swagger.yaml
@@ -81,6 +81,57 @@ definitions:
     required:
     - name
     type: object
+  products.GetProductsResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/products.ProductDTO'
+        type: array
+      page:
+        type: integer
+      per_page:
+        type: integer
+      total:
+        type: integer
+      total_pages:
+        type: integer
+    type: object
+  products.ProductDTO:
+    properties:
+      allows_unrated_buyers:
+        type: boolean
+      auto_extends_time:
+        type: boolean
+      bin_price:
+        type: number
+      created_at:
+        type: string
+      description:
+        type: string
+      expired_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      seller:
+        $ref: '#/definitions/products.ProfileDTO'
+      starting_bid:
+        type: number
+      step_bid_type:
+        type: string
+      step_bid_value:
+        type: number
+      thumbnail_url:
+        type: string
+    type: object
+  products.ProfileDTO:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+    type: object
   shared.ErrorResponse:
     properties:
       error:
@@ -392,6 +443,37 @@ paths:
       summary: Checks health of the server.
       tags:
       - others
+  /products:
+    get:
+      description: Queries from a list of products using a set of keywords, using
+        Full-text Queries or Fuzzy and Similarity queries.
+      parameters:
+      - description: Search Query
+        in: query
+        name: query
+        type: string
+      - description: Page Number
+        in: query
+        name: page
+        type: integer
+      - description: Items per Page
+        in: query
+        name: per_page
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/products.GetProductsResponse'
+        "500":
+          description: The server could not make the request
+          schema:
+            $ref: '#/definitions/shared.ErrorResponse'
+      summary: Queries products using fuzzy matchers and full-text matchers.
+      tags:
+      - products
   /users/me:
     get:
       description: Retrieves information about your own profile if authenticated.
